--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 * {
-  font-family: 'Spectral', serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  letter-spacing: 0.025em;
+  line-height: 1.5rem;
 }
 
 html {
